// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<CustomTitle /> > should render correctly with default props 1`] = `
.c0 {
  font-size: 1.6rem;
  color: #0D0D0D;
  font-weight: 400;
  padding: 32px;
}

@media (max-width: 320px) {
  .c0 {
    font-size: 1.6rem;
  }
}

<h1
  class="c0"
>
  Header
</h1>
`;

exports[`<CustomTitle /> > should render correctly with props 1`] = `
.c0 {
  font-size: 3rem;
  color: #F5F5F5;
  font-weight: 700;
  padding: 32px;
}

@media (max-width: 320px) {
  .c0 {
    font-size: 1.6rem;
  }
}

<h1
  class="c0"
>
  Header
</h1>
`;
